fix banners on small screens

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -192,6 +192,7 @@ header.banner {
     border-radius: 0.5rem;
     box-shadow: 0.5rem 0.5rem 1rem rgba(0,0,0,0.5);
     text-align: center;
+    word-wrap: break-word;
 }
 
 header.banner>h1 {
@@ -233,6 +234,22 @@ header.banner.nobg {
 section>header {
     font-size: 2rem;
     margin: 1rem 0;
+}
+
+@media screen and (max-width: 800px) {
+    header.banner>h1 {
+        font-size: 2.5rem;
+    }
+
+    header.banner>h2 {
+        font-size: 1.6rem;
+    }
+}
+
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+    header.banner>h1 {
+        font-size: 3.5rem;
+    }
 }
 
 
